--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -6,7 +6,8 @@
     font-family: Merriweather;
     font-style: normal;
     font-weight: 900;
-    src: url("../fonts/merriweather-900.woff2") format("woff2"),
+    src:
+        url("../fonts/merriweather-900.woff2") format("woff2"),
         url("../fonts/merriweather-900.woff") format("woff");
 }
 
@@ -20,31 +21,31 @@
 }
 
 @font-face {
-    font-display: swap; 
-    font-family: 'Montserrat Alternates';
+    font-display: swap;
+    font-family: "Montserrat Alternates";
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/montserrat-alternates-regular-subset.woff2') format('woff2');
+    src: url("../fonts/montserrat-alternates-regular-subset.woff2") format("woff2");
     unicode-range: "U+26,U+2C,U+32,U+37,U+38,U+41,U+43,U+4D,U+55,U+61-65,U+69,U+6C,U+6E,U+73,U+79";
-  }
+}
 
-  @font-face {
-    font-display: swap; 
-    font-family: 'Montserrat Alternates';
+@font-face {
+    font-display: swap;
+    font-family: "Montserrat Alternates";
     font-style: normal;
     font-weight: 600;
-    src: url('../fonts/montserrat-alternates-600-subset.woff2') format('woff2');
+    src: url("../fonts/montserrat-alternates-600-subset.woff2") format("woff2");
     unicode-range: "U+20,U+41,U+55,U+57,U+61-65,U+69,U+6C-6F,U+72,U+73";
-  }
+}
 
-  @font-face {
-    font-display: swap; 
-    font-family: 'Montserrat Alternates';
+@font-face {
+    font-display: swap;
+    font-family: "Montserrat Alternates";
     font-style: normal;
     font-weight: 800;
-    src: url('../fonts/montserrat-alternates-800-subset.woff2') format('woff2');
+    src: url("../fonts/montserrat-alternates-800-subset.woff2") format("woff2");
     unicode-range: "U+20,U+41,U+61,U+64-69,U+6B,U+6E,U+6F,U+72,U+74";
-  }
+}
 
 @font-face {
     font-display: swap;
