--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -15,15 +15,15 @@
     }
 
     header > svg {
-        height: auto;
-        width: 3rem;
+        block-size: auto;
+        inline-size: 3rem;
     }
 
     h2,
     .subhead {
-        font-family: 'Montserrat Alternates', sans-serif;
-        font-weight: 400;
+        font-family: "Montserrat Alternates", sans-serif;
         font-size: 1.5rem;
+        font-weight: 400;
         line-height: 1.3;
     }
 
@@ -38,7 +38,7 @@
     .subhead strong {
         font-weight: 800;
     }
-    
+
     ul {
         font-family: Mulish, sans-serif;
         font-size: 1rem;
@@ -46,11 +46,11 @@
         line-height: 1.5;
         padding-inline-start: 0;
     }
-    
+
     li::before {
         display: none;
     }
-    
+
     @include breakpoint-up(md) {
         header {
             align-items: center;
@@ -59,14 +59,14 @@
         }
 
         header > svg {
-            width: 6.125rem;
+            inline-size: 6.125rem;
         }
 
         h2,
         .subhead {
             font-size: 2.75rem;
-        }  
-        
+        }
+
         h2 {
             margin-block-start: 0;
         }
