--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -1,6 +1,130 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+#acaw-cama {
+    > div:nth-child(1) {
+        padding-block: 2.5rem;
+    }
+
+    > div:nth-child(2) {
+        padding-block: 1.25rem;
+    }
+
+    > div:nth-child(3) {
+        padding-block: 2rem;
+    }
+
+    header > svg {
+        block-size: auto;
+        inline-size: 3rem;
+
+        .cls-1 {
+            fill: var(--fl-bgColor, url("#linear-gradient"));
+        }
+
+        .cls-1,
+        .cls-2,
+        .cls-3,
+        .cls-4,
+        .cls-5 {
+            stroke-width: 0;
+        }
+
+        .cls-2 {
+            fill: var(--fl-fgColor, #231f20);
+        }
+
+        .cls-6 {
+            fill: var(--fl-bgColor, #e94e2a);
+        }
+
+        .cls-3 {
+            fill: none;
+        }
+
+        .cls-7 {
+            fill: var(--fl-bgColor, #eb3c59);
+        }
+
+        .cls-4 {
+            fill: var(--fl-bgColor, url("#linear-gradient-2"));
+        }
+
+        .cls-5 {
+            fill: var(--fl-bgColor, url("#linear-gradient-3"));
+        }
+
+        .cls-8 {
+            fill: var(--fl-bgColor, #e3864c);
+        }
+
+        .cls-9 {
+            fill: var(--fl-bgColor, #e7616a);
+        }
+    }
+
+    h2,
+    .subhead {
+        font-family: "Montserrat Alternates", sans-serif;
+        font-size: 1.5rem;
+        font-weight: 400;
+        line-height: 1.3;
+    }
+
+    h2 {
+        margin-block-start: 0.875rem;
+    }
+
+    h2 strong {
+        font-weight: 600;
+    }
+
+    .subhead strong {
+        font-weight: 800;
+    }
+
+    ul {
+        font-family: Mulish, sans-serif;
+        font-size: 1rem;
+        font-weight: 700;
+        line-height: 1.5;
+        padding-inline-start: 0;
+    }
+
+    li::before {
+        display: none;
+    }
+
+    @include breakpoint-up(md) {
+        header {
+            align-items: center;
+            display: flex;
+            gap: 2.25rem;
+        }
+
+        header > svg {
+            inline-size: 6.125rem;
+        }
+
+        h2,
+        .subhead {
+            font-size: 2.75rem;
+        }
+
+        h2 {
+            margin-block-start: 0;
+        }
+
+        .subhead strong {
+            margin-inline-end: 1ch;
+        }
+
+        .subhead br {
+            display: none;
+        }
+    }
+}
+
 #what-is-inclusive-design {
     .section__content {
         padding-block: rem(128) 0;
